# Unbox-It

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  demo.tape  pyproject.toml  render.yaml  requirements.txt
.github/ISSUE_TEMPLATE/: feedback.yml
.github/workflows/: cd.yml  ci.yml  demo-gif.yml  deploy-hf.yml
deploy/hf/: README.md
docs/: USAGE.md
newspush/: artifacts.py  config.py  pipeline.py
newspush/data/: acquire.py  db.py  download.py  make_sample.py  mind_loader.py  schema.py
newspush/experiment/: ab_test.py  off_policy.py  simulator.py
newspush/explain/: why.py
newspush/features/: text.py  users.py
newspush/models/: audience.py  bandit.py  content_selection.py  diversity.py  fatigue.py  send_time.py  uplift.py
newspush/serving/: api.py  batch.py
scripts/: readme_numbers.py
tests/: conftest.py  test_data.py  test_experiment.py  test_features.py  test_models.py  test_serving.py
